feat(.Net): adicionar continuação dos exercícios.

--- a/modulos/modulo-05-.Net/MarioKart/MarioKart/MarioKart.csproj
+++ b/modulos/modulo-05-.Net/MarioKart/MarioKart/MarioKart.csproj
@@ -41,10 +41,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Corredores\Corredor.cs" />
+    <Compile Include="Corredores\Habilidade.cs" />
     <Compile Include="Equipamentos\IEquipamento.cs" />
     <Compile Include="Equipamentos\MotorABaseDeLava.cs" />
     <Compile Include="Equipamentos\PneuDeCouroDeDragao.cs" />
+    <Compile Include="Kart\Dinam.cs" />
     <Compile Include="Kart\Kart.cs" />
+    <Compile Include="Kart\Light.cs" />
+    <Compile Include="Kart\Sonnar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
