feat(.Net): adicionar continuação dos exercícios e testes - nivel três.

--- a/modulos/modulo-05-.Net/MarioKart/MarioKart/MarioKart.csproj
+++ b/modulos/modulo-05-.Net/MarioKart/MarioKart/MarioKart.csproj
@@ -42,9 +42,11 @@
   <ItemGroup>
     <Compile Include="Corredores\Corredor.cs" />
     <Compile Include="Corredores\Habilidade.cs" />
+    <Compile Include="Equipamentos\FogueteDePlutonio.cs" />
     <Compile Include="Equipamentos\IEquipamento.cs" />
     <Compile Include="Equipamentos\MotorABaseDeLava.cs" />
     <Compile Include="Equipamentos\PneuDeCouroDeDragao.cs" />
+    <Compile Include="Equipamentos\UltraPack.cs" />
     <Compile Include="Kart\Dinam.cs" />
     <Compile Include="Kart\Kart.cs" />
     <Compile Include="Kart\Light.cs" />
