--- a/modulos/modulo-05-.Net/MarioKart/MarioKartTest/MarioKartTest.csproj
+++ b/modulos/modulo-05-.Net/MarioKart/MarioKartTest/MarioKartTest.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="NivelDoisTest.cs" />
+    <Compile Include="NivelTresTest.cs" />
     <Compile Include="NivelUmTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
