feat(.Net): adicionar continuação dos exercícios e testes - nível quatro.

--- a/modulos/modulo-05-.Net/MarioKart/MarioKart/MarioKart.csproj
+++ b/modulos/modulo-05-.Net/MarioKart/MarioKart/MarioKart.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Kart\Dinam.cs" />
     <Compile Include="Kart\Kart.cs" />
     <Compile Include="Kart\Light.cs" />
+    <Compile Include="Kart\SkyFusion.cs" />
     <Compile Include="Kart\Sonnar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
