feat(dot-net): adiconar funcionalidade de edição e exclusão de cadastro.

--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/StreetFighter.Web.csproj
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/StreetFighter.Web.csproj
@@ -140,6 +140,7 @@
     <Content Include="Views\StreetFighter\Cadastro.cshtml" />
     <Content Include="Views\StreetFighter\Sobre.cshtml" />
     <Content Include="Views\StreetFighter\ListaPersonagem.cshtml" />
+    <Content Include="Views\StreetFighter\Retorno.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
