--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Aplicativo/StreetFighter.Aplicativo.csproj
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Aplicativo/StreetFighter.Aplicativo.csproj
@@ -42,11 +42,16 @@
   <ItemGroup>
     <Compile Include="PersonagemAplicativo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServicoDeUsuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StreetFighter.Dominio\StreetFighter.Dominio.csproj">
       <Project>{15210220-58e7-4056-95a8-79d7c46d89ad}</Project>
       <Name>StreetFighter.Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StreetFighter.Infra\StreetFighter.Infra.csproj">
+      <Project>{B8551439-C959-4D3E-9F11-A20FB36263C1}</Project>
+      <Name>StreetFighter.Infra</Name>
     </ProjectReference>
     <ProjectReference Include="..\StreetFighter.Repositorio\StreetFighter.Repositorio.csproj">
       <Project>{05bc039d-06f6-475f-9cc3-60aa1de9e570}</Project>
