--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Infra/StreetFighter.Infra.csproj
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Infra/StreetFighter.Infra.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{05BC039D-06F6-475F-9CC3-60AA1DE9E570}</ProjectGuid>
+    <ProjectGuid>{B8551439-C959-4D3E-9F11-A20FB36263C1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StreetFighter.Repositorio</RootNamespace>
-    <AssemblyName>StreetFighter.Repositorio</AssemblyName>
+    <RootNamespace>StreetFighter.Infra</RootNamespace>
+    <AssemblyName>StreetFighter.Infra</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,15 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CadastroRepositorio.cs" />
-    <Compile Include="PersonagemRepositorio.cs" />
+    <Compile Include="ServicoDeCriptografia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\StreetFighter.Dominio\StreetFighter.Dominio.csproj">
-      <Project>{15210220-58e7-4056-95a8-79d7c46d89ad}</Project>
-      <Name>StreetFighter.Dominio</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
