feat(dot-net): adicionar métodos iniciais para acesso ao banco.

--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Web.config
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Web.config
@@ -48,4 +48,7 @@
       <remove name="ApplicationInsightsWebTracking"/>
     </modules>
   </system.webServer>
+  <connectionStrings>
+    <add connectionString="Server=NB-002670\SQLEXPRESS;Database=StreetFighter;User ID=sa;Password=sa12345" name="StreetFighter"/>   
+  </connectionStrings>
 </configuration>
