feat(dot-net): adicionar cadastro, edição e remoção de personagem pelo BD, ainda faltam os testes.

--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Dominio/StreetFighter.Dominio.csproj
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Dominio/StreetFighter.Dominio.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cadastro.cs" />
+    <Compile Include="ICadastroRepositorio.cs" />
+    <Compile Include="IPersonagemRepositorio.cs" />
     <Compile Include="Personagem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegraNegocioException.cs" />
