--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Web.config
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Web.config
@@ -49,6 +49,6 @@
     </modules>
   </system.webServer>
   <connectionStrings>
-    <add connectionString="Server=NB-002670\SQLEXPRESS;Database=StreetFighter;User ID=sa;Password=sa12345" name="StreetFighter"/>   
+    <add connectionString="Server=GJK\SQLEXPRESS;Database=StreetFighterTeste;Trusted_Connection=True;" name="StreetFighterTeste"/>   
   </connectionStrings>
 </configuration>
