--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Repositorio/StreetFighter.Repositorio.csproj
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Repositorio/StreetFighter.Repositorio.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CadastroRepositorio.cs" />
+    <Compile Include="CadastroRepositorioSQL.cs" />
     <Compile Include="PersonagemRepositorio.cs" />
+    <Compile Include="PersonagemRepositorioSQL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
