--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Repositorio/StreetFighter.Repositorio.csproj
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Repositorio/StreetFighter.Repositorio.csproj
@@ -30,7 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,9 +50,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CadastroRepositorio.cs" />
+    <Compile Include="CadastroRepositorioArquivo.cs" />
+    <Compile Include="CadastroRepositorioEF.cs" />
     <Compile Include="CadastroRepositorioSQL.cs" />
-    <Compile Include="PersonagemRepositorio.cs" />
+    <Compile Include="DatabaseContext.cs" />
+    <Compile Include="Migrations\201611081747541_Initial.cs" />
+    <Compile Include="Migrations\201611081747541_Initial.Designer.cs">
+      <DependentUpon>201611081747541_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="PersonagemRepositorioArquivo.cs" />
+    <Compile Include="PersonagemRepositorioEF.cs" />
     <Compile Include="PersonagemRepositorioSQL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -52,6 +69,15 @@
       <Project>{15210220-58e7-4056-95a8-79d7c46d89ad}</Project>
       <Name>StreetFighter.Dominio</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201611081747541_Initial.resx">
+      <DependentUpon>201611081747541_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
