--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/StreetFighter.Web.csproj
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/StreetFighter.Web.csproj
@@ -102,6 +102,8 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\estilo-site.css" />
+    <Content Include="Content\imagens\back2.jpg" />
+    <Content Include="Content\imagens\back3.jpg" />
     <Content Include="Content\imagens\background.jpg" />
     <Content Include="Content\imagens\blanka.png" />
     <Content Include="Content\imagens\troll.png" />
