feat(dot-net): adicionar redirecionamento para login, se o usuario não estiver logado.

--- a/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Web.config
+++ b/modulos/modulo-05-dot-net/StreetFighter.Web/StreetFighter.Web/Web.config
@@ -48,7 +48,7 @@
     </modules>
   </system.webServer>
   <connectionStrings>
-    <add connectionString="Server=GJK\SQLEXPRESS;Database=StreetFighterEF;Trusted_Connection=True;" providerName="System.Data.SqlClient" name="StreetFighter" />
+    <add connectionString="Server=NB-002670\SQLEXPRESS;Database=StreetFighterEF;User Id=sa;Password=sa12345;" providerName="System.Data.SqlClient" name="StreetFighter" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
