--- a/src/modulo-05-dot-net/aula-09/Loja/Loja.Web/Loja.Web.csproj
+++ b/src/modulo-05-dot-net/aula-09/Loja/Loja.Web/Loja.Web.csproj
@@ -161,7 +161,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ProdutoModel.cs" />
+    <Compile Include="Models\UsuarioLogadoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Servicos\ServicoDeAutenticacao.cs" />
+    <Compile Include="Servicos\ServicoDeDependencias.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -207,7 +211,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
