--- a/modulos/modulo-05-dot-net/Loja/Loja.Web/Loja.Web.csproj
+++ b/modulos/modulo-05-dot-net/Loja/Loja.Web/Loja.Web.csproj
@@ -205,7 +205,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
-    <Content Include="Views\Cadastro\Lista.cshtml" />
+    <Content Include="Views\Cadastro\Index.cshtml" />
     <Content Include="Views\Cadastro\Retorno.cshtml" />
     <Content Include="Views\Cadastro\Cadastro.cshtml" />
   </ItemGroup>
