feat(dot-net): adicionar merge.

--- a/modulos/modulo-05-dot-net/Loja/Loja.Web/Web.config
+++ b/modulos/modulo-05-dot-net/Loja/Loja.Web/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="Loja" connectionString="Server=GJK\SQLEXPRESS;Database=Loja;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="Loja" connectionString="Server=NB-002670\SQLEXPRESS;Database=Loja;User ID=sa;Password=sa12345" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
