--- a/modulos/modulo-08-java/aula3/pom.xml
+++ b/modulos/modulo-08-java/aula3/pom.xml
@@ -5,20 +5,20 @@
     <artifactId>aula3</artifactId>
     <version>1.0.0.0</version>
     <packaging>jar</packaging>
-   
+
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>4.3.1.Final</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
-            <version>11.2.0.3.0</version>
+            <version>11.2.0.3</version>
         </dependency>
-        
+
     </dependencies>
 
     <properties>
@@ -26,4 +26,11 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>codelds</id>
+            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+        </repository>
+    </repositories>
 </project>
