feat(java): adicionar continuação do exercicio 5.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ bld/
 /modulos/modulo-08-java/aula4/target/
 /modulos/modulo-08-java/aula5/target/
 /modulos/modulo-08-java/cadastrofilmes/target/
+/modulos/modulo-08-java/cadastrodefilmes/target/
+/modulos/modulo-08-java/filmescadastro/target/
+/modulos/modulo-08-java/filmes/target/
