feat(java): adicionar aula8.

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ bld/
 /modulos/modulo-08-java/cadastrodefilmes/target/
 /modulos/modulo-08-java/filmescadastro/target/
 /modulos/modulo-08-java/filmes/target/
+/modulos/modulo-08-java/aula8/target/
